--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
 .todoList__item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px;
     margin-bottom: 10px;
     background-color:rgba(145, 143, 143, 0.438);
@@ -57,6 +58,7 @@
     color: rgb(230, 225, 225);
 }
 .acceptTask {
+    margin-right: 8px;
     width: 25px;
     height: 25px;
     background-size:20px 20px;
@@ -79,6 +81,7 @@
 }
 
 .deleteTask {
+    margin-left: 8px;
     width: 25px;
     height: 25px;
     background-image: url(../img/trash-solid.svg);
@@ -124,7 +127,6 @@
 }
 
 @media (max-width: 414px) {
-    
     .todoList {
         max-height: 400px;
     }
