--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ body {
     font-size: 25px;
     border-radius: 20px;
     background-color:rgb(255, 255, 255);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;   
+    -khtml-user-select: none;   
+    -moz-user-select: none;     
+    -ms-user-select: none;       
+    user-select: none;                                                 
 }
 .form__btnAdd {
     padding: 10px;
@@ -38,6 +44,12 @@ body {
     border-radius: 20px;
     background-color:rgb(191, 151, 202);
     color: white;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;   
+    -khtml-user-select: none;   
+    -moz-user-select: none;     
+    -ms-user-select: none;       
+    user-select: none;                                                 
 }
 .form__btnAdd:hover {
     opacity: 0.6;
@@ -113,8 +125,13 @@ body {
     background-color:rgb(191, 151, 202);
     color: white;
     transition: 0.1s;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;   
+    -khtml-user-select: none;   
+    -moz-user-select: none;     
+    -ms-user-select: none;       
+    user-select: none;                                                 
 }
-
 .btnClear:hover {
     opacity: 0.6;
 }
@@ -124,6 +141,7 @@ body {
         width: 200px;
         font-size: 20px;
     }
+}
 
 @media (max-width: 420px) {
     .todoList {
