--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,10 @@ body {
     background-color: rgba(52, 54, 52, 0.473);
     color: rgb(141, 141, 141);
 }
-
+.complitedText {
+    text-decoration: line-through;
+    
+}
 .deleteTask {
     margin-left: 8px;
     width: 25px;
