--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
+
 .myTodo {
     margin-top: 15px;
     display: flex;
@@ -16,7 +17,30 @@ body {
 .header{
     background-color: rgba(43, 57, 87, 0.822);
 }
+
+.header__inner {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.header__inner a {
+    padding: 2px;
+    color: inherit;
+    font-family: 'Neucha', cursive;
+    font-size: 25px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: 0.2s;
+}
+.header__inner a:hover {
+    background-color: rgb(44, 44, 44);
+    border-radius: 12px;
+}
 .title {
+    margin-right: 80px;
+    flex: 1 0 0;
     font-family: 'Press Start 2P', cursive;
     text-align: center;
     font-size: 20px;
@@ -25,6 +49,7 @@ body {
     padding: 10px;
     text-transform: uppercase;
 }
+
 .myTodo__inner {
     width: 700px;
     padding: 10px;
@@ -38,9 +63,10 @@ body {
     justify-content: center;
     margin-bottom: 20px;
 }
+
 .form__input {
     font-family: 'Neucha', cursive;
-    margin-right: 20px;
+    margin: 0px 20px;
     padding: 10px;
     font-size: 25px;
     border-radius: 20px;
